--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "widgets"
 version = "0.1.0"
 authors = ["Erich Heine <sophacles@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,3 +11,4 @@ tui = "0.17.0"
 termion = "1.5"
 textwrap = "0.13.4"
 pad = "0.1.6"
+bounded-vec-deque = "0.1.1"
