--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 
 [dependencies]
 tui = "0.17.0"
-crossterm = "0.23.2"
 bounded-vec-deque = "0.1.1"
+
+[dev-dependencies]
+crossterm = "0.23.2"
