--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tui = "0.17.0"
+tui = "0.18.0"
 bounded-vec-deque = "0.1.1"
+time = { version="0.3.11", features = ["local-offset", "macros"] }
 
 [dev-dependencies]
 crossterm = "0.23.2"
