--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,13 @@ edition = "2021"
 
 [dependencies]
 tui = "0.18.0"
-bounded-vec-deque = "0.1.1"
-time = { version="0.3.11", features = ["local-offset", "macros"] }
+bounded-vec-deque = { version ="0.1.1", optional = true}
+time = { version="0.3.11", features = ["local-offset", "macros"] , optional = true}
 
 [dev-dependencies]
 crossterm = "0.23.2"
+
+[features]
+default = ["separated_list", "calendar"]
+separated_list = ["dep:bounded-vec-deque"]
+calendar = ["dep:time"]
