--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "widgets"
+name = "extra-widgets"
 version = "0.1.0"
 authors = ["Erich Heine <sophacles@gmail.com>"]
 edition = "2021"
