--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ time = { version="0.3.11", features = ["local-offset", "macros"] , optional = tr
 crossterm = "0.23.2"
 
 [features]
-default = ["separated_list", "calendar"]
+default = ["separated_list", "calendar", "text_macros"]
 separated_list = ["dep:bounded-vec-deque"]
 calendar = ["dep:time"]
+text_macros = []
