--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,16 @@ edition = "2021"
 
 [dependencies]
 tui = "0.18.0"
-bounded-vec-deque = { version ="0.1.1", optional = true}
-time = { version="0.3.11", features = ["local-offset", "macros"] , optional = true}
-
+bounded-vec-deque = { version = "0.1.1", optional = true}
+time = { version = "0.3.11", features = ["local-offset", "macros"] , optional = true}
+serde = { version ="1.0", optional = true }
+serde_derive = { version = "1.0", optional = true }
 [dev-dependencies]
 crossterm = "0.23.2"
 
 [features]
 default = ["separated_list", "calendar", "text_macros"]
 separated_list = ["dep:bounded-vec-deque"]
+serde = ["dep:serde_derive", "dep:serde"]
 calendar = ["dep:time"]
 text_macros = []
