--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ serde_derive = { version = "1.0", optional = true }
 crossterm = "0.23.2"
 
 [features]
-default = ["separated_list", "calendar", "text_macros"]
-separated_list = ["dep:bounded-vec-deque", "dep:lazy_static"]
+default = ["styled_list", "calendar", "text_macros"]
+styled_list = ["dep:bounded-vec-deque", "dep:lazy_static"]
 serde = ["dep:serde_derive", "dep:serde"]
 calendar = ["dep:time"]
 text_macros = []
